@@ -111,6 +111,16 @@ class ApiParse extends ApiBase {
 			$titleObj = Title::newFromText($title);
 			if(!$titleObj)
 				$titleObj = Title::newFromText("API");
+			if($params['pst'] || $params['onlypst'])
+				$text = $wgParser->preSaveTransform($text, $titleObj, $wgUser, $popts);
+			if($params['onlypst'])
+			{
+				// Build a result and bail out
+				$result_array['text'] = array();
+				$this->getResult()->setContent($result_array['text'], $text);
+				$this->getResult()->addValue(null, $this->getModuleName(), $result_array);
+				return;
+			}
 			$p_result = $wgParser->parse($text, $titleObj, $popts);
 		}
 
@@ -222,7 +232,9 @@ class ApiParse extends ApiBase {
 					'sections',
 					'revid'
 				)
-			)
+			),
+			'pst' => false,
+			'onlypst' => false,
 		);
 	}
 
@@ -235,6 +247,12 @@ class ApiParse extends ApiBase {
 			'oldid' => 'Parse the content of this revision. Overrides page',
 			'prop' => array('Which pieces of information to get.',
 					'NOTE: Section tree is only generated if there are more than 4 sections, or if the __TOC__ keyword is present'
+			),
+			'pst' => array(	'Do a pre-save transform on the input before parsing it.',
+					'Ignored if page or oldid is used.'
+			),
+			'onlypst' => array('Do a PST on the input, but don\'t parse it.',
+					'Returns PSTed wikitext. Ignored if page or oldid is used.'
 			),
 		);
 	}
