@@ -118,7 +118,6 @@ class ApiQueryWatchlist extends ApiQueryGeneratorBase {
 
 		$this->addTables(array (
 			'watchlist',
-			'page',
 			'recentchanges'
 		));
 
@@ -126,14 +125,18 @@ class ApiQueryWatchlist extends ApiQueryGeneratorBase {
 		$this->addWhere(array (
 			'wl_namespace = rc_namespace',
 			'wl_title = rc_title',
-			'rc_cur_id = page_id',
 			'wl_user' => $userId,
 			'rc_deleted' => 0,
 		));
 
 		$this->addWhereRange('rc_timestamp', $dir, $start, $end);
 		$this->addWhereFld('wl_namespace', $namespace);
-		$this->addWhereIf('rc_this_oldid=page_latest', !$allrev);
+		if(!$allrev)
+		{
+			$this->addTables('page');
+			$this->addWhere('page_id=rc_cur_id');
+			$this->addWhereIf('rc_this_oldid=page_latest');
+		}
 
 		if (!is_null($show)) {
 			$show = array_flip($show);
